updated lesson16 parts but in lesson 17 videos

--- a/nbs/03_preprocessing.lesson_16_after_lesson.ipynb
+++ b/nbs/03_preprocessing.lesson_16_after_lesson.ipynb
@@ -230,14 +230,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "2ed925fd",
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
     "class Callback:\n",
-    "\torder = 0"
+    "\torder = 0\n",
+    "\t_fwd = 'model', 'opt','batch', 'epoch'\n",
+    "\n",
+    "\tdef __getattr__(self, name):\n",
+    "\t\tif name in self._fwd: \n",
+    "\t\t\treturn getattr(self.learn,name)\n",
+    "\t\traise AttributeError(name)\n",
+    "\n",
+    "\tdef __setattr__(self, name, value):\n",
+    "\t\tif name in self._fwd: warn(f'Setting {name} in a callback,Did you mean to set learn.{name}`?')\n",
+    "\t\tsuper().__setattr__(name, value)\n",
+    "\n",
+    "\t@property\n",
+    "\tdef training(self): return self.model.training\n"
    ]
   },
   {
