working on lesson7 next work Generalized ReLu

--- a/nbs/04_preprocessing.lesson_16_second_part.ipynb
+++ b/nbs/04_preprocessing.lesson_16_second_part.ipynb
@@ -89,6 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| exporti\n",
     "from fastai_course22p2.preprocessing.lesson16_after_lesson import *"
    ]
   },
@@ -128,6 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "@inplace\n",
     "def transformi(b):\n",
     "\tb['image'] = [TF.to_tensor(o) for o in b['image']]\n"
@@ -1092,6 +1094,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "delegates(plt.Axes.imshow)\n",
     "def show_image(im, ax=None, figsize=None, title=None, noframe=True, **kwargs):\n",
     "    \"Show a PIL or PyTorch image on `ax`.\"\n",
@@ -1217,6 +1220,31 @@
    "metadata": {},
    "source": [
     "## Callbacks as Hooks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a9835bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "class Callback:\n",
+    "\torder = 0\n",
+    "\t_fwd = 'model', 'opt','batch', 'epoch'\n",
+    "\n",
+    "\tdef __getattr__(self, name):\n",
+    "\t\tif name in self._fwd: \n",
+    "\t\t\treturn getattr(self.learn,name)\n",
+    "\t\traise AttributeError(name)\n",
+    "\n",
+    "\tdef __setattr__(self, name, value):\n",
+    "\t\tif name in self._fwd: warn(f'Setting {name} in a callback,Did you mean to set learn.{name}`?')\n",
+    "\t\tsuper().__setattr__(name, value)\n",
+    "\n",
+    "\t@property\n",
+    "\tdef training(self): return self.model.training\n"
    ]
   },
   {
@@ -1670,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
